--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -5,7 +5,7 @@
         <h1 style="font-size: 24px">
           <strong>Open Ethereum Pool</strong>
         </h1>
-        <strong>Min. payout threshold: {{config.PayoutThreshold}}</strong>, Payouts run twice per day.<br/>
+        <strong>Min. payout threshold: {{config.PayoutThreshold}}</strong>, Payouts run twice a day.<br/>
         <span class="label label-success">PROP</span> Stable and profitable pool with regular payouts.
       </div>
       <div class="col-md-3 stats">
