--- a/www/app/templates/payments.hbs
+++ b/www/app/templates/payments.hbs
@@ -22,10 +22,10 @@
           <td>{{format-date-locale tx.timestamp}}</td>
           <td>{{format-number tx.formatAmount}}</td>
           <td>
-            <a href="https://etherscan.io/address/{{tx.address}}" class="hash" rel="nofollow" target="_blank">{{tx.address}}</a>
+            <a href="http://tomotomo9696.xyz:3000/addr/{{tx.address}}" class="hash" rel="nofollow" target="_blank">{{tx.address}}</a>
           </td>
           <td>
-            <a href="https://etherscan.io/tx/{{tx.tx}}" class="hash" rel="nofollow" target="_blank">{{format-tx tx.tx}}</a>
+            <a href="http://tomotomo9696.xyz:3000/tx/{{tx.tx}}" class="hash" rel="nofollow" target="_blank">{{format-tx tx.tx}}</a>
           </td>
         </tr>
       {{/each}}
