--- a/www/app/templates/application.hbs
+++ b/www/app/templates/application.hbs
@@ -8,13 +8,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand"><span class="logo-1">Ξthereum</span><span class="logo-2">Pool</span></a>
+      <a class="navbar-brand"><span class="logo-1">Nekonium</span><span class="logo-2">Pool</span></a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         {{#active-li currentWhen='index'}}
           {{#link-to 'index'}}
-            <i class="fa fa-home"></i> Home
+            <i class="fa fa-paw"></i> Home
           {{/link-to}}
         {{/active-li}}
         {{#active-li currentWhen='help'}}
