--- a/www/app/templates/blocks/block.hbs
+++ b/www/app/templates/blocks/block.hbs
@@ -1,18 +1,18 @@
 <tr>
   <td>
     {{#if block.uncle}}
-      <a href="https://etherscan.io/uncle/{{block.uncleHeight}}" rel="nofollow" target="_blank">{{format-number block.height}}</a>
+      <a href="https://tomotomo9696.xyz:3000/uncle/{{block.uncleHeight}}" rel="nofollow" target="_blank">{{format-number block.height}}</a>
     {{else}}
       <a href="http://tomotomo9696.xyz:3000/block/{{block.height}}" rel="nofollow" target="_blank">{{format-number block.height}}</a>
     {{/if}}
   </td>
   <td>
     {{#if block.uncle}}
-      <a href="http://tomotomo9696.xyz:3000/addr/{{block.hash}}" class="hash" rel="nofollow" target="_blank">{{block.hash}}</a>
+      <a href="http://tomotomo9696.xyz:3000/uncle/{{block.uncleHeight}}" class="hash" rel="nofollow" target="_blank">{{block.hash}}</a>
     {{else if block.orphan}}
       <span class="label label-danger">Orphan</span>
     {{else}}
-      <a href="http://tomotomo9696.xyz:3000/addr/{{block.hash}}" class="hash" rel="nofollow" target="_blank">{{block.hash}}</a>
+      <a href="http://tomotomo9696.xyz:3000/block/{{block.height}}" class="hash" rel="nofollow" target="_blank">{{block.hash}}</a>
     {{/if}}
   </td>
   <td>{{format-date-locale block.timestamp}}</td>
