Update help information with ether miner

--- a/www/app/templates/help.hbs
+++ b/www/app/templates/help.hbs
@@ -2,13 +2,17 @@
   <div class="page-header">
     <h1>How To Mine</h1>
   </div>
-  <h4>In order to mine on this pool you need to have Clamore miner</h4>
-    <a href="https://mega.nz/#F!O4YA2JgD!n2b4iSHQDruEsYUvTQP5_w" rel="nofollow" target="_blank">Claymore</a>
-  <p> 
-   <br>
-    <strong>Full example:</strong>
+  <h4>Clamore miner <a href="https://mega.nz/#F!O4YA2JgD!n2b4iSHQDruEsYUvTQP5_w" rel="nofollow" target="_blank">download</a></h4>
+    <strong>Intel/AMD/Nvidia:</strong>
     <code>ethdcrminer64 -epool nuko.oldbeyond.com:8008 -ewal 0x99484734488439ea080d690f94ffebce6aa6b512 -epsw x -allpools 1 -mode 1</code>.<br/>
-  </p>
+ 
+  <h4>Ethminer <a href="https://github.com/ethereum-mining/ethminer/releases">download</a></h4>
+    <strong>Intel/AMD</strong>
+    <code>ethminer -G -F http://nuko.oldbeyond.com:8888/0xe61e4976499d0e32905602ab74cfed6264f76096</code>.<br/>
+    <strong>Nvidia</strong>
+    <code>ethminer -U -F http://nuko.oldbeyond.com:8888/0xe61e4976499d0e32905602ab74cfed6264f76096</code>.<br/>
+
+    
 
  
   <h4>Advice</h4>
