--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -41,7 +41,8 @@
   <div>
     <hr/>
     <h4 class="note note-info text-center">
-      ethdcrminer64 -epool nuko.oldbeyond.com:8008 -ewal &lt;address&gt;.&lt;.worker&gt; -epsw &lt;password&gt; -allpools 1 -mode 1
+        Welcome to Nekonium Pool      
+       {{#link-to 'help'}}   How to mine? {{/link-to}}
     </h4>
   </div>
 </div>
