Added cloud mining settings

--- a/www/app/templates/help.hbs
+++ b/www/app/templates/help.hbs
@@ -4,16 +4,20 @@
   </div>
   <h4>Clamore miner <a href="https://mega.nz/#F!O4YA2JgD!n2b4iSHQDruEsYUvTQP5_w" rel="nofollow" target="_blank">download</a></h4>
     <strong>Intel/AMD/Nvidia:</strong>
-    <code>ethdcrminer64 -epool nuko.oldbeyond.com:8008 -ewal 0x99484734488439ea080d690f94ffebce6aa6b512 -epsw x -eworker workername -allpools 1 -mode 1</code>.<br/>
- 
+    <code>ethdcrminer64 -epool nuko.oldbeyond.com:8008 -ewal 0x99484734488439ea080d690f94ffebce6aa6b512 -epsw x -allpools 1 -mode 1</code>.<br/>
+  <br/>
   <h4>Ethminer <a href="https://github.com/ethereum-mining/ethminer/releases">download</a></h4>
     <strong>Intel/AMD</strong>
-    <code>ethminer -G -F http://nuko.oldbeyond.com:8888/0xe61e4976499d0e32905602ab74cfed6264f76096/workername</code>.<br/>
+    <code>ethminer -G -F http://nuko.oldbeyond.com:8888/0xe61e4976499d0e32905602ab74cfed6264f76096</code>.<br/>
     <strong>Nvidia</strong>
-    <code>ethminer -U -F http://nuko.oldbeyond.com:8888/0xe61e4976499d0e32905602ab74cfed6264f76096/workername</code>.<br/>
-
-    
-
+    <code>ethminer -U -F http://nuko.oldbeyond.com:8888/0xe61e4976499d0e32905602ab74cfed6264f76096</code>.<br/>
+  <br/>
+  <h4>Cloud Miners</h4>
+  <strong>stratum+tcp:</strong><code>52.168.133.100</code><br/>
+  <strong>port</strong><code>3333</code><br/>
+  <strong>password</strong><code>#</code><br/>
+  
+  <br/>
  
   <h4>Advice</h4>
   <p>CPU mining is not recommended.</p>
